# CudaPix

./: .gitignore  CMakeLists.txt  README.md
src/cli/: main_cli.cpp
src/core/: filters_cpu.cpp  filters_cpu.h  filters_cuda.cu  filters_cuda.h  image.cpp  image.h
src/gui/: main_gui.cpp
